client/src/pages/Account.css
#account {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  /* background-color: #53565a; */
}

input,
button {
  appearance: none;
  background: none;
  border: none;
  outline: none;
}

.auth-form {
  display: block;
  position: relative;
}

.auth-form:after {
  content: "";
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  z-index: 1;
  background-image: linear-gradient(to bottom right, #0cbaba, #f92a82);
}

.auth-form .form-inner {
  position: relative;
  display: block;
  background-color: #fff;
  padding: 30px;
  z-index: 2;
}

.auth-form .form-inner h2 {
  color: #888;
  font-size: 28px;
  font-weight: 500;
  margin-bottom: 30px;
}

.auth-form .form-inner .form-group {
  display: block;
  width: 300px;
  margin-bottom: 15px;
}

.form-inner .form-group label {
  display: block;
  color: #666;
  font-size: 16px;
  margin-bottom: 5px;
  transition: 0.4s;
}

.form-inner .form-group:focus-within label {
  color: #f92a82;
}

.auth-form .form-inner .form-group input {
  display: block;
  width: 100%;
  padding: 10px 15px;
  background-color: #f8f8f8;
  border-radius: 8px;
  transition: 0.4s;
}

.auth-form .form-inner .form-group input:focus {
  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
}

.auth-form .form-inner input[type="submit"] {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-image: linear-gradient(
    to right,
    #0cbaba 50%,
    #0cbaba 50%,
    #f92a82
  );
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.auth-form .form-inner input[type="submit"]:hover {
  background-position: 100% 0%;
}

